--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ pydantic>=2.7.0
 langgraph>=0.1.7
 langserve>=0.2.2
 # Add any other dependencies you have
+pyyaml>=6.0.1
 
 # from https://langchain-ai.github.io/langgraph/tutorials/rag/langgraph_adaptive_rag/
 langchain>=0.2.7
