--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ langgraph>=0.1.7
 langserve>=0.2.2
 # Add any other dependencies you have
 pyyaml>=6.0.1
+shortuuid>=1.0.13
 
 # from https://langchain-ai.github.io/langgraph/tutorials/rag/langgraph_adaptive_rag/
 langchain>=0.2.7
