--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ langserve>=0.2.2
 # Add any other dependencies you have
 pyyaml>=6.0.1
 shortuuid>=1.0.13
+async-lru>=2.0.4
+dynaconf>=3.2.6
 
 # from https://langchain-ai.github.io/langgraph/tutorials/rag/langgraph_adaptive_rag/
 langchain>=0.2.7
