--- a/default-config.yaml
+++ b/default-config.yaml
@@ -4,12 +4,27 @@
 #
 config:
   common:
-    default_llm_with_streaming:
+    default_llm:
+      name: ChatOpenAI
       ChatOpenAI:
-        model_name: "gpt-4o"
-        # overwrite with: export RAG_CONFIG__COMMON__DEFAULT_LLM_WITH_STREAMING__ChatOpenAI__model_name="gpt-ais-invalid-model"
-        temperature: 0
-        streaming: True
+        module: langchain_openai
+        class: ChatOpenAI
+        args:
+          # you can overwrite, e.g. "model_name" with environment variable:
+          #   export RAG_CONFIG__COMMON__DEFAULT_LLM_WITH_STREAMING__ChatOpenAI__args__model_name="gpt-ais-invalid-model"
+          model_name: "gpt-4o"
+          temperature: 0
+          streaming: False
+
+    default_llm_with_streaming:
+      name: ChatOpenAI
+      ChatOpenAI:
+        module: langchain_openai
+        class: ChatOpenAI
+        args:
+          model_name: "gpt-4o"
+          temperature: 0
+          streaming: True
 
   crawling:
     enabled: true
