Setup blob/document loaders based on yaml configuration

--- a/default-config.yaml
+++ b/default-config.yaml
@@ -134,6 +134,53 @@ config:
   rag_loading:
     enabled: true
 
+    # The following loader types are supported:
+    # - "BlobLoader" - to load content files
+    #     The "class" is of type langchain_community.document_loaders.[blob_loaders.schema.]BlobLoader.
+    #     The loader is used together with the DefaultBlobParser
+    #     (of type langchain_community.document_loaders.BaseBlobParser).
+    #     Example classes are:
+    #       - WgetBlobLoader
+    #       - langchain_community.document_loaders.blob_loaders.file_system.FileSystemBlobLoader
+    #       - langchain_community.document_loaders.blob_loaders.cloud_blob_loader.CloudBlobLoader
+    #         (supports AWS "s3://", Azure "az://", Google Cloud "gs://", and local file "file://" schemes)
+    # - "BaseLoader" - to load the documents
+    #     The "class" is of type langchain_community.document_loaders.BaseLoader
+    #     with is the base of all "normal" document loader in Langchain..
+    loaders:
+      # Load test documents from a GitHub folder
+      project-github-testdocs-loader:
+        enabled: true
+        type: "BlobLoader"
+        # class=<module>.<blob-loader-class>
+        class: rag_index_service.tools.WgetBlobLoader
+        args:
+          url: "https://example.com/"
+          base_url: "https://example.com/foo"
+          depth: 3
+          max_pages: 1000
+          foo: "bar"
+          dir: "./"
+          # Optionally, provide a full command line to execute.
+          # In this command line, you can reference the other args as variables "${arg.<ARG-NAME>}".
+          #command: "wget -r -np -nH -nd -A '*.md' -P ./ -e robots=off --no-check-certificate --no-cache --no-cookies --header 'Authorization: token <YOUR GITHUB TOKEN>' https://api.github.com/repos/<YOUR REPO>/contents/<YOUR FOLDER>"
+
+      test-filesystemblob-loader-loader:
+        enabled: true
+        type: "BlobLoader"
+        # class=<module>.<blob-loader-class>
+        class: langchain_community.document_loaders.blob_loaders.FileSystemBlobLoader
+        args:
+          path: "./test-data"
+          glob: "*.md"
+          show_progress: true
+
+      # example URLs to crawl:
+        #"https://dance123.org/",
+        #"https://file-examples.com/storage/fe44eeb9cb66ab8ce934f14/2017/04/file_example_MP4_480_1_5MG.mp4",
+        #"https://lilianweng.github.io/posts/2023-06-23-agent/",
+        #"https://lilianweng.github.io/posts/2023-03-15-prompt-engineering/",
+        #"https://lilianweng.github.io/posts/2023-10-25-adv-attack-llm/",
 
   rag_indexing:
     enabled: true
@@ -154,25 +201,25 @@ config:
     enrich_all_user_messages_with_retrieved_documents: false
 
 
-  embedding_and_indexing:
-    enabled: true
-    embedding_model: "bert-base-uncased"
-    index_path: "/data/aisbreaker-workspace/hapkecom-github/flexi-rag/index"
+  #embedding_and_indexing:
+  #  enabled: true
+  #  embedding_model: "bert-base-uncased"
+  #  index_path: "/data/aisbreaker-workspace/hapkecom-github/flexi-rag/index"
 
-  vector_search:
-    enabled: true
-    index_path: "/data/aisbreaker-workspace/hapkecom-github/flexi-rag/index"
-    similarity_threshold: 0.7
+  #vector_search:
+  #  enabled: true
+  #  index_path: "/data/aisbreaker-workspace/hapkecom-github/flexi-rag/index"
+  #  similarity_threshold: 0.7
 
-  string_keyword_search:
-    enabled: true
-    index_path: "/data/aisbreaker-workspace/hapkecom-github/flexi-rag/index"
+  #string_keyword_search:
+  #  enabled: true
+  #  index_path: "/data/aisbreaker-workspace/hapkecom-github/flexi-rag/index"
 
-  final_llm_processing:
-    enabled: true
-    model: "gpt2"
-    max_length: 100
-    temperature: 0.8
+  #final_llm_processing:
+  #  enabled: true
+  #  model: "gpt2"
+  #  max_length: 100
+  #  temperature: 0.8
 
 
 # test entries without any semantics:
