--- a/default-config.yaml
+++ b/default-config.yaml
@@ -95,40 +95,43 @@ config:
           check_same_thread: false      
 
       # Sqlite3 - requires package: sqlite3
-      ALTERNATIVE_SQLITE3_sql_database:
-        connect: sqlite3.connect
-        args:
-          # path to the SQLite database file
-          database: "/path/to/database/file.db"
-          # other settings
-          check_same_thread: false
+      #sql_database:
+      #  connect: sqlite3.connect
+      #  args:
+      #    # path to the SQLite database file
+      #    database: "/path/to/database/file.db"
+      #    # other settings
+      #    check_same_thread: false
+
       # PostgreSQL- requires package: psycopg2-binary or psycopg2
-      ALTERNATIVE_POSTGRESQL_sql_database:    # NOT TESTED YET!!!
-        connect: psycopg2.connect
-        args:
-          host: "localhost"
-          port: 5432
-          database: "db_name"
-          user: "db_user"
-          password: "db_password"
+      #sql_database:    # NOT TESTED YET!!!
+      #  connect: psycopg2.connect
+      #  args:
+      #    host: "localhost"
+      #    port: 5432
+      #    database: "db_name"
+      #    user: "db_user"
+      #    password: "db_password"
+
       # MySQL - requires package: mysql-connector-python
-      ALTERNATIVE_MYSQL_sql_database:   # NOT TESTED YET!!!
-        connect: mysql.connector.connect
-        args:
-          host: "localhost"
-          port: 3306
-          database: "db_name"
-          user: "db_user"
-          password: "db_password"
+      #sql_database:   # NOT TESTED YET!!!
+      #  connect: mysql.connector.connect
+      #  args:
+      #    host: "localhost"
+      #    port: 3306
+      #    database: "db_name"
+      #    user: "db_user"
+      #    password: "db_password"
+
       # MariaDB - requires package: mariadb (+OS package libmariadb-dev)
-      ALTERNATIVE_MARIADB_sql_database:   # NOT TESTED YET!!!
-        connect: mariadb.connect
-        args:
-          host: "localhost"
-          port: 3306
-          database: "db_name"
-          user: "db_user"
-          password: "db_password"
+      #sql_database:   # NOT TESTED YET!!!
+      #  connect: mariadb.connect
+      #  args:
+      #    host: "localhost"
+      #    port: 3306
+      #    database: "db_name"
+      #    user: "db_user"
+      #    password: "db_password"
 
 
   rag_loading:
